app/assets/stylesheets/custom.css.scss
/* ... */
#section1{
    background: #95a5a6;
    min-height: 600px;
    opacity: 0;
}

#section1header{
    text-align-last: center;
    margin-left: 36%;
    padding-top: 5%;
    color: white;
}

#ratingsystemphoto{
    position: absolute;
    padding-top: 5%;
}

#ratingparagraph{
    color: white;
    margin-left: 60%;
    margin-top: 15%;
    font-size: 130%;
    text-align: center;
}

@media only screen and (max-width: 1200px){
    
    #section1{
    min-height: 580px;
    }

    #ratingsystemphoto{
        width: 45%;
        margin-left: 1%;
    }
    
    #ratingparagraph{
        padding-left: 3%;
    }
}

@media only screen and (max-width: 991px){
    
    #section1{
    min-height: 450px;
    }

    #ratingsystemphoto{
        width: 45%;
        margin-top: 4%;
        padding-right: 3%;
    }
    
    #ratingparagraph{
        font-size: 100%;
        widows: 45%;
    }
}

@media only screen and (max-width: 720px){
    #section1{
        min-height: 850px;
    }
    #ratingsystemphoto{
        width: 90%;
        margin-top: 4%;
        padding-left: 5%;
        position: absolute;
    }
    
    #ratingparagraph{
        margin-top: 70%;
        font-size: 140%;
        text-align: center;
        margin-left: -3%;
    }
    #section1header{
        margin-left: 8%;
        text-align: center;
    }

}

@media only screen and (max-width: 670px){
    #section1{
        min-height: 700px;    
    }
}

@media only screen and (max-width: 480px){
    #section1{
        min-height: 620px;
    }
    
    #ratingparagraph{
        padding-top: 5%;
        font-size: 100%;
    }
    
    #section1header{
        padding-bottom: 8%;
        padding-top: 10%;
    }
}

@media only screen and (max-width: 360px){
    #section1{
        min-height: 620px;
    }
    #ratingsystemphoto{
    
    }
    #ratingparagraph{
        padding-top: 10%;
        font-size: 100%;
    }
    
    #section1header{
        padding-bottom: 8%;
        padding-top: 10%;
    }
    
}


/**************************************************/

#section2 {
	opacity: 0;
} /*Really important line, it basically tells the image to START OFF BLANK */


#section2{
    background: #26a65b;
}

#testimonial{
    background: #26a65b;
    color: white;
    text-align: center;
    padding: 5% 0;
    font-size: 120%;
}

#testimonial.fastanimate {
    -webkit-transform: translate(0em,0); /*3 is horizontal, 0 is vertical*/
	-moz-transform: translate(0em,0);
	transform: translate(0em,0);

}
/************************************************/

#section3{
    background: #9b59b6;
    width: 100%;
    opacity: 0;
}
#lead{
    background: #9b59b6;
    width: 100%;
    padding-bottom: 45%;
}

#leadphoto{
    width: 65%;
    position: absolute;
    padding-top: 11%;
    padding-left: 10%;
}
#leadheader{
    padding-bottom: 5%;
}
#leadtext{
    color: white;
    width: 97%;
    text-align: center;
    font-size: 100%;
    position: relative;
    padding-top: 10%;
    padding-left: 50%;
}

@media only screen and (max-width: 1125px){
    #leadphoto{
        width: 50%;
        
    }
    
    #leadtext{
        font-size: 90%;
    }
}

@media only screen and (max-width: 850px){
    #section3{
        padding-top: 5%;
        padding-bottom: 5%;
    }
    
    #leadtext{
      padding-top: 4%;
    }
} 

@media only screen and (max-width: 750px){
    #leadphoto{
        width: 80%;
        position: absolute;
        text-align: left;
        padding-top: 55%;
        margin-left: 8%;
    }
    
    #leadtext{    
        margin-top: -5%;
        margin-left: -21%;
        position: absolute;
        float: left;
    }
    
    
    #section3{
        padding-bottom: 65%;
    }
}

@media only screen and (max-width: 640px){
    #section3{
        padding-bottom: 80%;
    }
    #leadtext{    
        font-size: 80%;
    }
    #leadphoto{
        margin-top: 5%;
    }
}

@media only screen and (max-width: 580px){
    #section3{
        padding-bottom: 80%;
    }
    #leadphoto{
        margin-top: 10%;
    }
}

@media only screen and (max-width: 540px){
    #leadphoto{
        margin-top: 17%;
    }
}

@media only screen and (max-width: 480px){
    #leadphoto{
        margin-top: 35%;
    }
    #section3{
        padding-bottom: 95%;
    }
  
    #leadtext{
        font-size: 75%;
    }
}

@media only screen and (max-width: 424px){
    #leadphoto{
        margin-top: 39%;
    }
    #section3{
        padding-bottom: 125%;}
    #leadtext{
        font-size: 75%;
    }
    #getwordout{
        margin-top: 112%;
    }
    #leadheader{
        padding-bottom: 12%;
    }
}

@media only screen and (max-width: 363px){
    #section3{
        padding-bottom: 155%;}
    #leadheader{
        font-size: 250%;
        padding-top: 5%;
    }
   
    #leadtext{
      padding-bottom: 20%;
    }
}

/*****************************************************/

#track{
    background: #f1c40f;
    padding-bottom: 10%;
    min-height: 650px;
    opacity: 0;
}

#trackparagraph{
    color: white;
    position: absolute;
    margin-top: 9%;
    margin-left: 5%;
    font-size: 110%;
}

#trackheader{
    color: white;
    text-align: center;
    margin-top: 5%;
}

#trackphoto{
    width: 50%;
    float: right;
    margin-top: 4%;
    margin-right: 4%;
}

@media only screen and (max-width: 1200px) { 
    #trackparagraph{
        margin-top: 9%;
    }
    
    #track{
        min-height: 570px;
    }
}
@media only screen and (max-width: 992px) { 
    #trackparagraph{
        margin-left: 3%;
        margin-top: 6%;
    }
    #trackphoto{
        margin-right: 1%;
    }
    #track{
        min-height: 520px;
    }
}
@media only screen and (max-width: 740px) { 
    #trackparagraph{
        padding-top: 65%;
        text-align: center;
        width: 95%;
    }
    #trackphoto{
        width: 95%;
        padding-top: 10px;
    }
    #track{
        min-height: 900px;
        padding-top: 20px;
    }

}
/* ... */

